samples/_failures_safe/1761394693_3843bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0af30164.c: In function ‘main’:
./samples/SAFE/__tmp_0af30164.c:124:53: error: missing terminating " character
  124 |     add_log_entry(&analyzer, "2024-03-15 10:32:05", "INFO
      |                                                     ^~~~~
./samples/SAFE/__tmp_0af30164.c:124:5: error: expected expression at end of input
  124 |     add_log_entry(&analyzer, "2024-03-15 10:32:05", "INFO
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_0af30164.c:124:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_0af30164.c:62:5: note: declared here
   62 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_0af30164.c:124:5: error: expected declaration or statement at end of input
  124 |     add_log_entry(&analyzer, "2024-03-15 10:32:05", "INFO
      |     ^~~~~~~~~~~~~
